[package]
name = "transaction-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transaction-processing-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "transaction-processing-server"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"]}
tokio-stream = "0.1.14"
rust_decimal = "1.32.0"
dashmap = "5.5.3"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"]}
tokio-util = "0.7.9"
axum = "0.6.20"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.107"
