[package]
name = "transaction-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
csv-async = { version = "1.2.6", features = ["with_serde", "tokio"]}
serde = { version = "1.0.188", features = ["derive"]}
tokio-stream = "0.1.14"
rust_decimal = "1.32.0"
dashmap = "5.5.3"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"]}
tokio-util = "0.7.9"

[dev-dependencies]
serde_json = "1.0.107"
